--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 POSTGRES_HOST=localhost
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=password
+
+ADMIN_DEFAULT_EMAIL=admin@example.com
+ADMIN_DEFAULT_PASSWORD=password
